# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

#####################hydra-fuzz###################
import("//build/config/features.gni")
import("//build/test.gni")
import("../../test_ts.gni")

##############################fuzztest##########################################
module_output_path = "hiprofiler/ts_fuzz"
ohos_fuzztest("hiprofiler_ts_htrace_fuzz_test") {
  module_out_path = module_output_path

  include_dirs = [
    "../../../src",
    "../../../src/base",
    "../../../src/table",
    "../../../src/filter",
    "../../../src/trace_data",
    "../../../src/parser",
    "../../../src/trace_streamer",
    "../../../src/include",
    "../../../src/parser/bytrace_parser",
    "../../../src/cfg",
    "../../../src/parser/htrace_parser",
    "../../../src/parser/htrace_parser/htrace_event_parser",
    "//third_party/bounds_checking_function:libsec_public_config",
    "../../../src/parser/htrace_parser/htrace_cpu_parser",
    "//third_party/sqlite/include",
    "${OHOS_PROTO_GEN}/types/plugins/memory_data",
    "${OHOS_PROTO_GEN}/types/plugins/ftrace_data",
    "${OHOS_PROTO_GEN}/types/plugins/hilog_data",
    "${OHOS_PROTO_GEN}",
    "//third_party/protobuf/src",
  ]
  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]
  sources = [ "htrace_fuzzer.cpp" ]
  ldflags = [
    "-fprofile-arcs",
    "-ftest-coverage",
    "--coverage",
  ]
  deps = [
    "${OHOS_FTRACE_PROTO_DIR}:ftrace_data_cpp",
    "${OHOS_MEMORY_PROTO_DIR}:memory_data_cpp",
    "${OHOS_SERVICE_PROTO_DIR}:proto_services_cpp",
    "../../../src:trace_streamer_source",
    "//third_party/bounds_checking_function:libsec_static",
    "//third_party/protobuf:protobuf",
    "//third_party/protobuf:protobuf_lite",
    "//third_party/sqlite:sqlite",
  ]
}

###############################################################################
group("fuzztest") {
  testonly = true
  deps = []
  deps += [
    # deps file
    ":hiprofiler_ts_htrace_fuzz_test",
  ]
}
###############################################################################
