# THIS FILE IS GENERATE BY {}, PLEASE DON'T EDIT IT!
# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("../../../../base/config.gni")

trace_file_src_dir = "${OHOS_PROFILER_DIR}/device/services/profiler_service/src"

ohos_executable("trace_converter") {
  sources = [
    "$trace_file_src_dir/trace_file_helper.cpp",
    "$trace_file_src_dir/trace_file_reader.cpp",
    "event_formatter.cpp",
    "main.cpp",
    "trace_converter.cpp",
  ]
  defines = [ "_GNU_SOURCE" ]
  include_dirs = [
    "../../include",
    "${OHOS_PROFILER_DIR}/device/base/include",
    "$trace_file_src_dir",  # for trace file reader
    "${OHOS_PROFILER_DIR}/interfaces/kits",
    "//utils/native/base/include",
  ]
  deps = [
    "${OHOS_PROFILER_3RDPARTY_DIR}/boringssl:crypto",
    "${OHOS_PROFILER_DIR}/protos/services:service_types_proto",
    "${OHOS_PROFILER_DIR}/protos/types/plugins/ftrace_data:ftrace_data_cpp",
    "event_formatters:ftrace_event_formatters",
    "//utils/native/base:utilsecurec",
  ]
  public_configs = [ "${OHOS_PROFILER_DIR}/device/base:hiprofiler_test_config" ]
  install_enable = true
  subsystem_name = "${OHOS_PROFILER_SUBSYS_NAME}"
  part_name = "${OHOS_PROFILER_PART_NAME}"
}
