# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/ohos/ace/ace.gni")
import("//developtools/profiler/hidebug/hidebug.gni")

config("napi_hidebug_config") {
  visibility = [ ":*" ]

  include_dirs = [
    ".",
    "include/",
    "//utils/native/base/include",
    "//third_party/node/src",
    "//foundation/ace/napi",
    "//foundation/ace/napi/native_engine",
    "//foundation/ace/napi/interfaces/kits",
    "//third_party/musl/include/malloc.h",
  ]
}

ohos_shared_library("hidebug") {
  sources = [ "napi_hidebug.cpp" ]

  configs = [ ":napi_hidebug_config" ]

  deps = [
    "//base/hiviewdfx/hiview/adapter/utility:hiview_adapter_utility",
    "//foundation/ace/napi:ace_napi",
    "//utils/native/base:utils",
  ]

  external_deps = [
    "ability_base:want",
    "bundle_framework:appexecfwk_base",
    "bundle_framework:appexecfwk_core",
    "ces_standard:cesfwk_services",
    "hilog_native:libhilog",
    "ipc:ipc_core",
  ]

  relative_install_dir = "module"

  part_name = "profiler"
  subsystem_name = "developtools"
}
