# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
OHOS_PROFILER_3RDPARTY_PROTOBUF_DIR = "//third_party/protobuf"
proto_dir = "//third_party/protogen"
services_dir = "$proto_dir/services"
ftrace_data_dir = "$proto_dir/types/plugins/ftrace_data"
memory_data_dir = "$proto_dir/types/plugins/memory_data"
hilog_data_dir = "$proto_dir/types/plugins/hilog_data"
native_hook_dir = "$proto_dir/types/plugins/native_hook"
hidump_data_dir = "$proto_dir/types/plugins/hidump_data"

config("ts_proto_include_config") {
  include_dirs = [
    "$ftrace_data_dir",
    "$memory_data_dir",
    "$hilog_data_dir",
    "$native_hook_dir",
    "$hidump_data_dir",
  ]
}
source_set("ts_proto_data_cpp") {
  public_deps = [
    "${OHOS_PROFILER_3RDPARTY_PROTOBUF_DIR}:protobuf",
    "${OHOS_PROFILER_3RDPARTY_PROTOBUF_DIR}:protobuf_lite",
  ]
  cflags = [
    "-fPIC",
    "-ftrapv",
    "-fPIE",
    "-D_FORTIFY_SOURCE=2 -O2",
    "-Wno-zero-length-array",

    #   "-Wl,--disable-new-dtags,--rpath,/libpath1:/libpath2"
  ]
  if (!use_wasm) {
    cflags += [
      "-fstack-protector-strong",  #
      "-fstack-protector-all",
    ]
  }

  public_configs = [ ":ts_proto_include_config" ]
  sources = [
    "$ftrace_data_dir/binder.pb.cc",
    "$ftrace_data_dir/block.pb.cc",
    "$ftrace_data_dir/cgroup.pb.cc",
    "$ftrace_data_dir/clk.pb.cc",
    "$ftrace_data_dir/compaction.pb.cc",
    "$ftrace_data_dir/cpuhp.pb.cc",
    "$ftrace_data_dir/dma_fence.pb.cc",
    "$ftrace_data_dir/ext4.pb.cc",
    "$ftrace_data_dir/filelock.pb.cc",
    "$ftrace_data_dir/filemap.pb.cc",
    "$ftrace_data_dir/ftrace.pb.cc",
    "$ftrace_data_dir/ftrace_event.pb.cc",
    "$ftrace_data_dir/gpio.pb.cc",
    "$ftrace_data_dir/i2c.pb.cc",
    "$ftrace_data_dir/ipi.pb.cc",
    "$ftrace_data_dir/irq.pb.cc",
    "$ftrace_data_dir/kmem.pb.cc",
    "$ftrace_data_dir/net.pb.cc",
    "$ftrace_data_dir/oom.pb.cc",
    "$ftrace_data_dir/pagemap.pb.cc",
    "$ftrace_data_dir/power.pb.cc",
    "$ftrace_data_dir/printk.pb.cc",
    "$ftrace_data_dir/raw_syscalls.pb.cc",
    "$ftrace_data_dir/rcu.pb.cc",
    "$ftrace_data_dir/sched.pb.cc",
    "$ftrace_data_dir/signal.pb.cc",
    "$ftrace_data_dir/sunrpc.pb.cc",
    "$ftrace_data_dir/task.pb.cc",
    "$ftrace_data_dir/timer.pb.cc",
    "$ftrace_data_dir/trace_plugin_result.pb.cc",
    "$ftrace_data_dir/v4l2.pb.cc",
    "$ftrace_data_dir/vmscan.pb.cc",
    "$ftrace_data_dir/workqueue.pb.cc",
    "$ftrace_data_dir/writeback.pb.cc",
    "$hidump_data_dir/hidump_plugin_config.pb.cc",
    "$hidump_data_dir/hidump_plugin_result.pb.cc",
    "$hilog_data_dir/hilog_plugin_result.pb.cc",
    "$memory_data_dir/memory_plugin_common.pb.cc",
    "$memory_data_dir/memory_plugin_config.pb.cc",
    "$memory_data_dir/memory_plugin_result.pb.cc",
    "$native_hook_dir/native_hook_config.pb.cc",
    "$native_hook_dir/native_hook_result.pb.cc",
    "${services_dir}/common_types.pb.cc",
  ]
}
