# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("../../build/ts.gni")
ohos_source_set("base") {
  subsystem_name = "trace_streamer"
  part_name = "trace_streamer_source_base"
  deps = [
    ":ibase",
    ":parser",
    ":table",
  ]
  public_deps = [
    "../include:ibase",
    "sqlite_ext:sqliteext",
  ]
  include_dirs = [ "../include" ]
  sources = [
    "clock_filter.cpp",
    "codec_cov.cpp",
    "file.cpp",
    "log.cpp",
    "parting_string.cpp",
    "string_help.cpp",
  ]
  if (enable_ts_utest && !use_wasm) {
    cflags = [
      "-fprofile-arcs",
      "-ftest-coverage",
    ]
    ldflags = [
      "-fprofile-arcs",
      "-ftest-coverage",
      "--coverage",
    ]
  }
}
ohos_source_set("ibase") {
  subsystem_name = "trace_streamer"
  part_name = "ibase"
  sources = [
    "codec_cov.h",
    "file.h",
    "log.h",
    "parting_string.h",
    "string_to_numerical.h",
  ]
  include_dirs = []
  public_deps = []
  deps = []
  sources += [ "/usr/x86_64-w64-mingw32/include/windows.h" ]
}
ohos_source_set("parser") {
  subsystem_name = "trace_streamer"
  part_name = "parser"
  sources = [
    "htrace_plugin_time_parser.cpp",
    "htrace_plugin_time_parser.h",
  ]
  include_dirs = []
  public_deps = []
  deps = []
}
ohos_source_set("table") {
  subsystem_name = "trace_streamer"
  part_name = "table"
  sources = [
    "filter_constraints.cpp",
    "index_map.cpp",
  ]
  include_dirs = [ "${THIRD_PARTY}/sqlite/include" ]
  public_deps = []
  deps = []
}
