# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("../../build/ohos.gni")
import("../../build/ts.gni")

ohos_source_set("filter") {
  subsystem_name = "trace_streamer"
  part_name = "trace_streamer_filter"
  sources = [
    "args_filter.cpp",
    "args_filter.h",
    "binder_filter.cpp",
    "binder_filter.h",
    "clock_filter.h",
    "cpu_filter.cpp",
    "filter_base.cpp",
    "filter_base.h",
    "filter_filter.cpp",
    "filter_filter.h",
    "frame_filter.cpp",
    "frame_filter.h",
    "hi_sysevent_measure_filter.cpp",
    "hi_sysevent_measure_filter.h",
    "irq_filter.cpp",
    "irq_filter.h",
    "measure_filter.cpp",
    "measure_filter.h",
    "process_filter.cpp",
    "process_filter.h",
    "slice_filter.cpp",
    "slice_filter.h",
    "stat_filter.cpp",
    "stat_filter.h",
    "symbols_filter.cpp",
    "symbols_filter.h",
    "system_event_measure_filter.cpp",
    "system_event_measure_filter.h",
  ]
  if (enable_ts_utest && !use_wasm) {
    cflags = [
      "-fprofile-arcs",
      "-ftest-coverage",
    ]
    ldflags = [
      "-fprofile-arcs",
      "-ftest-coverage",
      "--coverage",
    ]
    if (is_test) {
      cflags += [ "-D IS_UT" ]
    }
  }
  deps = []
  include_dirs = [
    "${SRC}/base",
    "${SRC}/trace_streamer",
    "${SRC}/trace_data",
    "${SRC}/include",
    "${SRC}/filter",
    "${SRC}/cfg",
    "${OHOS_PROTO_GEN}/types/plugins/memory_data",
    "${SRC}",
    "${THIRD_PARTY}/protobuf/src",
    "${THIRD_PARTY}/sqlite/include",
    ".",
  ]

  if (!is_pbdecoder) {
    sources += [
      "native_hook_filter.cpp",
      "native_hook_filter.h",
      "offline_symbolization_filter.cpp",
      "offline_symbolization_filter.h",
    ]
    include_dirs += [
      "../proto_reader/include",
      "${OHOS_PROTO_GEN}/types/plugins/native_hook",
      "${THIRD_PARTY}/perf_include/musl",
    ]
  }

  if (with_perf) {
    sources += [
      "perf_data_filter.cpp",
      "perf_data_filter.h",
    ]
  }
}
